# jobstack-bpp

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  migrate.sh  rust-toolchain.toml
config/: example.yaml
migrations/: 20260127071945_profiles.sql
src/: config.rs  lib.rs  main.rs  state.rs
src/cron/: fetch_profiles.rs  mod.rs
src/db/: profile.rs
src/http/: http_server.rs  mod.rs
src/http/routes/: mod.rs  profiles.rs  routes.rs  webhook.rs
src/middleware/: api_key.rs
src/models/: core.rs  mod.rs  profiles.rs  search.rs  webhook.rs
src/services/: confirm.rs  init.rs  mod.rs  profile.rs  search.rs  select.rs  status.rs  webhook.rs
src/utils/: cron.rs  http_client.rs  logging.rs  mod.rs  payload_generator.rs  shared.rs
src/utils/mock_responses/: mod.rs  response.confirm.json  response.init.json  response.search.json  response.select.json  response.status.json
src/workers/: processor.rs
