[package]
name = "bpp-onest-lite"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
config = "0.15.11"
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt","json","time"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.98"
uuid = { version = "1.17.0", features = ["v4"] }